# queue-processor

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  .unibeautifyignore  .unibeautifyrc.json  .unibeautifyrc.yml  .yapfignore  ICAT_Client.py  ISIS_monitor_daemon.py  ISIS_monitor_win_service.py  ISISendOfRunMonitor.py  InstrumentMapping.xml  Makefile  ManualSubmission.py  README.md  Stomp_Client.py  Technical Documentation.md  apache_autoreduce_webapp.conf  apache_setup.md  autoreduce.code-workspace  codecov.yml  dev-requirements.txt  environment.yml  example_reduce.py  example_reduce_vars.py  icat_test.py  mysql_post_cycle.py  pull_request_template.md  pyproject.toml  pytest.ini  requirements.txt  settings.py  settings.py.template  setup isis autoreduction.docx  setup.py  setup.sh  simple_stomp_test.py  (+2 more)
.github/: dependabot.yml  pull_request_template.md
AutoreduceQueueChecker/: pom.xml
CheckScripts/: ReductionPendingCheck.sh  ReductionStartedCheck.sh
Documentation/: Class Diagram.vsdx  ER Diagram.vsdx  README.md  Server Overview.vsdx  State Machine.vsdx  Technical Documentation.md  list_of_IIS_features.txt
EndOfRunMonitor/: ICAT_Client.py  ISIS_archive_monitor.py  ISIS_archive_monitor_daemon.py  ISIS_archive_monitor_helper.py  ISIS_monitor_daemon.py  ISIS_monitor_win_service.py  ISISendOfRunMonitor.py  README.md  Stomp_Client.py  database_client.py  isis_archive_monitor.py  isis_archive_monitor_daemon.py  isis_archive_monitor_helper.py  isis_monitor_win_service.py  settings.py.template  test_settings.py
ManualSubmissionScript/: ICAT_Client.py
MySQLDumpScript/: dumpDb.bat
PostProcessRPM/: README.md  setup isis autoreduction.docx  setup.sh
QueueProcessors/: README.md  stop.sh  (+3 more)
(+1003 files in other folders)
